# Time-Bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bot/: main.py
bot/utils/: constants.py  utils.py
cogs/: fetch.py  timezone.py
